# BrowseComp-Plus

./: .gitignore  Agents.md  README.md  check_date.py  check_dates.py  find_2022_archives.py  pyproject.toml  search_2022.py  search_2022_botanical.py  search_all_qau.py  search_qau_2022.py  search_query.py
mas_agents/: README.md  __init__.py  base_agent.py  benchmark_runner.py  bm25_searcher.py  evaluate_kimi.py  llm_client.py  multi_agents.py  package.json  prompts.py  run_eval.py  single_agent.py  tsconfig.json
mas_agents/src/: base-agent.ts  benchmark-runner.ts  bm25-bridge.ts  evaluate-kimi.ts  index.ts  llm-client.ts  multi-agents.ts  prompts.ts  run-eval.ts  single-agent.ts
mas_agents/summary/: architecture_thesis_paragraph.md
runs/bm25/centralized_gpt_4.1/: run_20260315T031823Z_769.json
runs/bm25/decentralized_gpt_4.1/: run_20260315T032048Z_769.json  run_20260325T061335Z_769.json  run_20260325T061826Z_770.json  run_20260325T062012Z_771.json  run_20260325T062151Z_772.json  run_20260325T062330Z_773.json  run_20260325T062535Z_774.json  run_20260325T062802Z_775.json  run_20260325T063020Z_776.json  run_20260325T063137Z_778.json  run_20260325T063347Z_781.json  run_20260325T063638Z_783.json  run_20260325T063940Z_784.json  run_20260325T064142Z_785.json  run_20260325T064451Z_786.json  run_20260325T064717Z_787.json  run_20260325T064945Z_788.json  run_20260325T065106Z_790.json  run_20260325T065310Z_791.json  run_20260325T065506Z_792.json  run_20260325T065736Z_793.json  (+810 more)
summary/: browsecomp_plus_web_browsing_measure.md  decentralized_agent.md  single_agent.md
(+858 files in other folders)
