[project]
name = "browsecomp-plus"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "openai>=1.97.0",
    "pyserini>=1.2.0",
    "python-dotenv>=1.1.1",
    "rich>=14.0.0",
    "tqdm>=4.67.1",
    "transformers>=4.53.2",
]
